--- a/Data/Log.ini
+++ b/Data/Log.ini
@@ -1,4 +1,7 @@
-[2025-07-15 오후 5:21:43]
-ReStartEvent=발생
-[2025-07-15 오후 5:22:00]
-ReStartEvent=발생
+[2025-07-16]
+15 : 02 : 03=ReStartEvent 발생
+15 : 02 : 11=ReStartEvent 발생
+15 : 12 : 33=ReStartEvent 발생
+16 : 58 : 32=ReStartEvent 발생
+17 : 12 : 06=ReStartEvent 발생
+17 : 12 : 14=ReStartEvent 발생
