로그 파일 시스템 제작

--- a/Data/Log.ini
+++ b/Data/Log.ini
@@ -1,7 +1,8 @@
 [2025-07-16]
-15 : 02 : 03=ReStartEvent 惯积
-15 : 02 : 11=ReStartEvent 惯积
-15 : 12 : 33=ReStartEvent 惯积
-16 : 58 : 32=ReStartEvent 惯积
-17 : 12 : 06=ReStartEvent 惯积
-17 : 12 : 14=ReStartEvent 惯积
+15 : 02 : 03=ReStart
+15 : 02 : 11=ReStart
+15 : 12 : 33=ReStart
+16 : 58 : 32=ReStart
+17 : 12 : 06=ReStart
+17 : 12 : 14=ReStart
+
