--- a/Data/setting.ini
+++ b/Data/setting.ini
@@ -1,6 +1,8 @@
-[ReStartButton]
-ON/OFF=False
-[Path]
-Path=C:\Users\ghkse\OneDrive\문서\카카오톡 받은 파일
 [ProcessName]
 ProcessName=
+
+[ReStartButton]
+ON/OFF=False
+
+[Path]
+Path=C:\Users\ghkse\OneDrive\사진\스크린샷
